dist/examples/keycloak/keycloak-operator/keycloak-http-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak-http
  namespace: keycloak
  labels:
    app: keycloak
spec:
  host: keycloak-http.local
  to:
    kind: Service
    name: keycloak-http
    weight: 100
  port:
    targetPort: keycloak-http
  wildcardPolicy: None
